--- a/.src/FMain.form
+++ b/.src/FMain.form
@@ -8,6 +8,11 @@
   Resizable = False
   { Menu3 Menu
     Text = ("About")
+    { mnuCheckUpdate Menu
+      Text = ("Check Update")
+    }
+    { Menu2 Menu
+    }
     { mnuApoie Menu
       Text = ("Support MITranslate")
     }
