--- a/.src/FAbout.form
+++ b/.src/FAbout.form
@@ -1,57 +1,17 @@
 # Gambas Form File 3.0
 
 { Form Form
-  MoveScaled(0,0,74,74)
+  MoveScaled(0,0,74,73)
   Font = Font["12"]
   Text = ("About MITranslate")
   Icon = Picture["mitranslate.png"]
   Resizable = False
-  { TabStrip1 TabStrip
-    MoveScaled(1,2,72,70)
+  { TabStrip1 TabPanel
+    MoveScaled(1,1,72,70)
     Count = 2
     TextFont = Font["Bold"]
     Index = 0
     Text = ("MITranslate")
-    { TextArea1 TextArea
-      MoveScaled(1,37,71,27)
-      #Translate = False
-      Text = "MITranslate is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, only version 2 of the License.\n\nMITranslate is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details."
-      ReadOnly = True
-      Wrap = True
-      ScrollBar = Scroll.Vertical
-    }
-    { Label1 Label
-      MoveScaled(1,29,66,4)
-      #Translate = False
-      Alignment = Align.TopLeft
-      Text = "Copyright (C) 2024-2025 Murilo Gomes Julio"
-    }
-    { Label3 Label
-      MoveScaled(1,17,66,4)
-      #Translate = False
-      Alignment = Align.TopLeft
-      Text = "Developed by: Murilo Gomes Julio"
-    }
-    { Label4 Label
-      MoveScaled(1,25,37,4)
-      #Translate = False
-      Text = "Site:"
-    }
-    { Label5 Label
-      MoveScaled(1,21,32,4)
-      #Translate = False
-      Text = "Mestre da Info"
-    }
-    { URLLabel1 URLLabel
-      MoveScaled(6,25,42,4)
-      #Translate = False
-      Text = "www.mestredainfo.com.br"
-    }
-    { Label6 Label
-      MoveScaled(1,32,30,5)
-      #Translate = False
-      Text = "License: GPL-2.0-only"
-    }
     { Label7 Label
       MoveScaled(1,2,70,10)
       #Translate = False
@@ -63,9 +23,49 @@
       #Translate = False
       Alignment = Align.TopLeft
     }
+    { Label3 Label
+      MoveScaled(1,17,66,4)
+      #Translate = False
+      Alignment = Align.TopLeft
+      Text = "Developed by: Murilo Gomes Julio"
+    }
+    { Label5 Label
+      MoveScaled(1,21,32,4)
+      #Translate = False
+      Text = "Mestre da Info"
+    }
+    { Label4 Label
+      MoveScaled(1,25,37,4)
+      #Translate = False
+      Text = "Site:"
+    }
+    { Label1 Label
+      MoveScaled(1,29,66,4)
+      #Translate = False
+      Alignment = Align.TopLeft
+      Text = "Copyright (C) 2024-2025 Murilo Gomes Julio"
+    }
+    { Label6 Label
+      MoveScaled(1,32,30,5)
+      #Translate = False
+      Text = "License: GPL-2.0-only"
+    }
+    { TextArea1 TextArea
+      MoveScaled(1,37,71,27)
+      #Translate = False
+      Text = "MITranslate is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, only version 2 of the License.\n\nMITranslate is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details."
+      ReadOnly = True
+      Wrap = True
+      ScrollBar = Scroll.Vertical
+    }
+    { URLLabel1 URLLabel
+      MoveScaled(6,25,42,4)
+      #Translate = False
+      Text = "www.mestredainfo.com.br"
+    }
     Index = 1
     Text = ("Third Party Software Credits")
-    { TabStrip2 TabStrip
+    { TabStrip2 TabPanel
       MoveScaled(1,1,70,63)
       Count = 1
       TextFont = Font["Bold"]
